--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -7,6 +7,7 @@
     <title>首页</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1 id="demo">Hello World!</h1>
+    <img src="./assets/Desert.jpg" alt="">
 </body>
 </html>
