--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1 id="demo">Hello World!</h1>
-    <img src="./assets/Desert.jpg" alt="">
+    <img src="../assets/Desert.jpg" alt="">
 </body>
 </html>
